# Hendoman

./: Hendoman.cabal
app/: CommandLine.hs  Main.hs  Template.hs
src/: Options.hs
src/CodeGeneration/: CodeGenerator.hs  JavascriptCode.hs
src/CodeGeneration/Javascript/: JavascriptES5.hs  JavascriptES6.hs
src/Except/: TypeDef.hs
src/Naming/: VariableAssignment.hs
src/Parse/: HtmlParser.hs  Repeat.hs  TemplateParser.hs
src/Tree/: HtmlTree.hs  TemplateExpression.hs
test/: Spec.hs
test/Naming/: VariableAssignmentTest.hs
test/Parse/: TemplateParserTest.hs
